<resources>
    <string name="app_name">Practica04_chezeery_189029</string>
    <string name="welcomeText">Welcome to the Cheezery</string>
    <string name="welcomeDescription">Home of the most wonderful desserts ever seen(and tasted) by the human being. </string>
    <string name="buttonStart">Get start!</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="eMail">E-Mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept the terms and conditions of the Cheezery</string>
    <string name="sing_in">Sing in</string>
    <string name="our_menu">Our menu</string>
    <string name="cold_drinks">Cold drinks</string>
    <string name="hot_drinks">Hot drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="customizable">Custom</string>
    <string name="caramelFrap">Caramel Frap</string>
    <string name="chocolateFrap">Chocolate Frap</string>
    <string name="coldBrew">Cold Brew</string>
    <string name="matchaLatte">Matcha Latte</string>
    <string name="oreoMilkshake">Oreo Milkshake</string>
    <string name="peanutMilkshake">Peanut Milkshake</string>
    <string name="cFrapDescription">Caramel syrup meets coffee, milk and ice and whipped cream and buttery caramel sauce layer the love on top.</string>
    <string name="chocoFDescription">Rich mocha-flavored sauce meets up with chocolaty chips, milk and ice for a blender bash.</string>
    <string name="coldBrewDescription">Created by steeping medium-to-coarse ground coffee in room temperature water for 12 hours or longer.</string>
    <string name="matchaDescription">Leafy taste of matcha green tea powder with creamy milk and a little sugar for a flavor balance that will leave you feeling ready and raring to go.</string>
    <string name="oreoDescription">Chocolate ice cream, and oreo cookies. Topped with whipped cream with cocoa and chocolate syrup.</string>
    <string name="peanutDescription">Vanilla ice cream, mixed with peanut butter and chocolate.</string>
</resources>