<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_grey"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/welcomeImg"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:src="@drawable/the_cheezery"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/dusty_white"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/welcomeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:textColor="@color/dusty_white"
        android:text="@string/welcomeDescription"
        android:textAlignment="center"
        android:padding="15dp"
        />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="219dp"
            android:layout_height="40dp"
            android:text="@string/buttonStart"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            />

</LinearLayout>